Slide 26. Am micsorat fontul notelor.

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 			<li class="fragment">Care sunt noile facilitati (<span class="em2">markup</span> &amp; <span class="em2">APIs</span>)</li>
 			<li class="fragment">Parti bune, care sunt provocarile</li>
 			<li class="fragment">Impactul asupra dispozitivelor clasice si mobile</li>
-			<li class="fragment">Studii de caz</li>
-			<li class="fragment">Exemple concrete folosite de mine</li>
+			<li class="fragment"><span class="em2">Pauza</span></li>
+			<li class="fragment">Studii de caz si exemple</li>
 		</ul>
 	</section>
 
@@ -198,43 +198,12 @@
 	</section>
 
 	<section>
-		<h2>Ce este HTML5</h2>
+		<h2>Ce este HTML5?</h2>
 	</section>
 
-
-
-
-
-
-
-	<section>
-		<!-- slide cu cpanel, cart, github -->
-		<!-- slide 'Sa ne cunoastem' -->
-		<!-- Slide 'Cati dintre voi au folosit pana acum HTML5 in productie?' -->
-		<!-- Slide 'Cati dintre voi au dezvoltat aplicatii web de tip single-page?' -->
-		<!-- Slide 'Cati dintre voi au dezvoltat jocuri pe web (Flash, HTML5)' -->
-		<!-- HTML5 cool & new parts; not so cool parts -->
 	<section>
 
-	<section>
-		<!-- explicatie sumar/structura prezentare/pauze -->
-	</section>
-
-	<section data-transition="fade">
-
-		<h2>What is HTML5?</h2>
-
-		<ol>
-			<li class="fragment">upgrade for <span class="em2">HTML 4.01</span> and <span class="em2">XHTML 1.1</span></li>
-			<li class="fragment"><span class="em2">new</span> HTML tags and attributes</li>
-			<li class="fragment">a new set of <span class="em2">APIs</span> for browsers</li>
-			<li class="fragment"><span class="em2">different mindset</span></li>
-			<li class="fragment"><span class="em2">departure</span> from 3<sup>rd</sup> party plugins</li>
-		</ol>
-	</section>
-
-	<section data-state="mint">
-		<h2>What is HTML5?</h2>
+		<h6>Ce este HTML5?</h6>
 
 		<table>
 			<tr>
@@ -250,23 +219,52 @@
 	</section>
 
 	<section>
-		<h2>New features</h2>
-	</section>
-
-	<section data-state="whiteout">
-		<div style="background:white;border-radius:50%; border:5px solid #ddd;"><img src="imgs/HTML5-APIs-and-related-technologies-by-Sergey-Mavrody.png" /></div>
-		<div><small>Credits: Sergey Mavrody</small></div>
+		<h2>Va multumesc</h2>
+		<p>O seara minunata in continuare!</p>
 	</section>
 
 	<section>
-		<h2>Notable markup differences</h2>
-		<p>New and relaxed parsing rules for browsers.
-			<br>Both <span class="em2">&lt;img src="test.jpg" /&gt;</span> and <span class="em2">&lt;img src="test.jpg"&gt;</span> accepted.</p>
+		<h2>Ce este HTML5</h2>
+
+		<ol style="margin-top:20px; font-size:80%;">
+			<li class="fragment">upgrade de la <span class="em2">HTML 4.01</span> si <span class="em2">XHTML 1.1</span></li>
+			<li class="fragment"><span class="em2">tag-uri</span> si <span class="em2">atribute</span> noi</li>
+			<li class="fragment"><span class="em2">API-uri noi</span> (in majoritate JavaScript)</li>
+			<li class="fragment">o abordare diferita in constructia paginilor web</li>
+			<li class="fragment">renuntare totala la librarii 3rd party<br> (Flash, Silverlight, Java applets, etc)</li>
+		</ol>
 	</section>
 
 	<section>
-		<h2>Notable markup differences</h2>
-		<p>New tags</p>
+		<section>
+			<h2>Noutati importante in HTML5</h2>
+
+			<table style="margin:0 auto;">
+				<tr>
+					<td><h3 style="background:rgba(50, 255, 0, 0.5); padding:10px; border-radius:10px;">Elemente si atribute HTML<h3></td>
+					<td><h3 style="background:rgba(255, 150, 0, 0.5); padding:10px; border-radius:10px;">API<small>uri</small></h3></td>
+				</tr>
+			</table>
+
+			<p style="margin-top:20px; font-size:80%;">De retinut: Elementele si atributele noi simuleaza <br>comportamentul unor widget-uri JavaScript populare.</p>
+		</section>
+
+		<section data-state="whiteout">
+			<div style="background:white;border-radius:50%; border:5px solid #ddd;"><img src="imgs/HTML5-APIs-and-related-technologies-by-Sergey-Mavrody.png" /></div>
+			<p><small>Credits: Sergey Mavrody</small></p>
+		</section>
+	</section>
+
+	<section>
+		<h2>Tag-uri si atribute</h2>
+		<p>Reguli de parsare a paginilor mult mai relaxate.</p>
+		<p style="margin-top:20px; font-size:80%;">Atat <span class="em2">&lt;img src="test.jpg" /&gt;</span> cat si <span class="em2">&lt;img src="test.jpg"&gt;</span> sunt acceptate.</p>
+	</section>
+
+	<section>
+		<h2>Tag-uri si atribute</h2>
+		<h6>Elemente noi</h6>
+
 		<table style="margin:10px auto 0;">
 			<tr>
 				<td class="em2">&lt;article&gt;</td>
@@ -317,6 +315,35 @@
 		, , , , , , data, datalist, details, , figcaption, figure, , , keygen, mark, meter, nav, output, progress, rp, rt, ruby, , source, summary, time, , , wbr
 		-->
 	</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<section>
+		<!-- slide cu cpanel, cart, github -->
+		<!-- slide 'Sa ne cunoastem' -->
+		<!-- Slide 'Cati dintre voi au folosit pana acum HTML5 in productie?' -->
+		<!-- Slide 'Cati dintre voi au dezvoltat aplicatii web de tip single-page?' -->
+		<!-- Slide 'Cati dintre voi au dezvoltat jocuri pe web (Flash, HTML5)' -->
+		<!-- HTML5 cool & new parts; not so cool parts -->
+		<!-- explicatie sumar/structura prezentare/pauze -->
+	<section>
 
 	<section>
 		<h2>Notable markup differences</h2>
