37 de slide-uri

--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
     <section>
 
     	<section>
-			<h2>Tag-uri si atribute</h2>
-			<h6>Microdata</h6>
+			<h6>Tag-uri si atribute</h6>
+			<h2>Microdata</h2>
 
 			<ul>
 				<li class="fragment">Ce este <span class="em2">microdata</span>?</li>
@@ -452,8 +452,8 @@
     	</section>
 
 		<section>
-			<h2>Tag-uri si atribute</h2>
-			<h6>Microdata</h6>
+			<h6>Tag-uri si atribute</h6>
+			<h2>Microdata</h2>
 
 			<p>Este un set de <span class="em2">atribute HTML</span> ce se aplica peste elementele HTML existente in pagina pentru
 				a da textului un inteles semantic specific. (ex. eveniment, review, produs, etc)</p>
@@ -467,12 +467,12 @@
 		<section data-markdown="microdata.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
 
 		<section>
-			<h2>Tag-uri si atribute</h2>
-			<h6>Microdata</h6>
+			<h6>Tag-uri si atribute</h6>
+			<h2>Microdata</h2>
 
 			<p>Cum este aplicat la Google</p>
 
-			<ul>
+			<ul style="margin-top:20px; font-size:80%;">
 				<li class="fragment">Article</li>
 				<li class="fragment">Book Reviews</li>
 				<li class="fragment">Events</li>
@@ -489,10 +489,41 @@
 		</section>
     </section>
 
+    <section>
+    	<h2>API<small>uri</small></h2>
+    	<h6 class="fragment">Sumar</h6>
 
+    	<table style="margin:0 auto;">
+    		<tr>
+    			<td>
+			    	<ul style="margin-top:20px; font-size:80%;">
+			    		<li class="fragment">Web Storage</li>
+			    		<li class="fragment">WebSQL &amp; IndexedDB</li>
+			    		<li class="fragment">Offline Web Applications</li>
+			    		<li class="fragment">WebWorkers</li>
+			    		<li class="fragment">WebSockets</li>
+			    		<li class="fragment">Geolocation</li>
+			    	</ul>
+    			</td>
+    			<td>
+					<ul style="margin-top:20px; font-size:80%;">
+						<li class="fragment">Device orientation</li>
+						<li class="fragment">Speech input</li>
+						<li class="fragment">Video &amp; Audio</li>
+						<li class="fragment">Touch events</li>
+						<li class="fragment">Canvas 2D</li>
+						<li class="fragment">SVG</li>
+					</ul>
+    			</td>
+    		</tr>
+    	</table>
 
+    </section>
 
-
+    <section data-markdown="webstorage.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    <section data-markdown="websql.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    <section data-markdown="indexeddb.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    <section data-markdown="offlineapps.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
 
 
 
@@ -509,6 +540,8 @@
 		<!-- Slide 'Cati dintre voi au dezvoltat jocuri pe web (Flash, HTML5)' -->
 		<!-- HTML5 cool & new parts; not so cool parts -->
 		<!-- explicatie sumar/structura prezentare/pauze -->
+		<!-- poze cu deviceuri -->
+		<!-- mentiune CSS3 3d transforms -->
 	<section>
 
 
@@ -517,15 +550,7 @@
 
 
 
-	<!-- poze cu deviceuri -->
 
-
-
-
-
-	<section>
-		<h2 class="em2">Notable APIs</h2>
-	</section>
 
 	<section>
 
@@ -546,7 +571,7 @@
 	<section data-markdown="canvas_screenshots_screen.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
 	<section data-markdown="canvas_screenshots_canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
 
-	<!-- mentiune CSS3 3d transforms -->
+
 
 
 
