42 slides fara subslide-uri.

--- a/index.html
+++ b/index.html
@@ -526,9 +526,36 @@
     <section data-markdown="offlineapps.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="webworkers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="websockets.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-    <!-- @todo: aici -->
     <section data-markdown="geolocation.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-    <section data-markdown="deviceorientation.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    <section>
+
+    	<section data-markdown="deviceorientation.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+
+    	<section>
+    		<h6>API<small>uri</small></h6>
+    		<h2>Device orientation change</h2>
+
+    		<img src="imgs/orientation/portrait.png" height="500" />
+
+    	</section>
+    	<section>
+    		<h6>API<small>uri</small></h6>
+    		<h2>Device orientation change</h2>
+
+    		<img src="imgs/orientation/landscape.png" height="500" />
+
+    	</section>
+
+    	<section>
+    		<img src="imgs/orientation/landscape2.png" height="500" />
+    	</section>
+    	<section>
+    		<img src="imgs/orientation/landscape3.png" height="500" />
+    	</section>
+    	<section>
+    		<img src="imgs/orientation/landscape4.png" height="500" />
+    	</section>
+    </section>
     <section data-markdown="speech.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="video_audio.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="touch_events.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
