--- a/index.html
+++ b/index.html
@@ -559,14 +559,29 @@
     <section data-markdown="speech.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="video_audio.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
     <section data-markdown="touch_events.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-    <section data-markdown="canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-    <section data-markdown="svg.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    <section>
+		<section data-markdown="canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+		<section data-markdown="canvas_screenshots_screen.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+		<section data-markdown="canvas_screenshots_canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    </section>
+    <section>
+    	<section data-markdown="svg.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
+    	<section>
+    		<h6>API<small>uri</small></h6>
+			<h2>SVG</h2>
+
+			<img src="imgs/svg/raster.png">
+
+			<img src="imgs/svg/svg.png">
+    	</section>
+	</section>
 
 
 
 
 
 	<section>
+		<h2>Pauza</h2>
 		<!-- slide cu cpanel, cart, github -->
 		<!-- slide 'Sa ne cunoastem' -->
 		<!-- Slide 'Cati dintre voi au folosit pana acum HTML5 in productie?' -->
@@ -576,123 +591,59 @@
 		<!-- explicatie sumar/structura prezentare/pauze -->
 		<!-- poze cu deviceuri -->
 		<!-- mentiune CSS3 3d transforms -->
-	<section>
-
-
-
-
-
-
-
-
-
-	<section>
-
-		<h6>Notable APIs</h6>
-
-		<ul>
-			<li class="fragment">Canvas 2D - <span class="em2">var ctx = canvasElem.getContext('2d');</span></li>
-			<li class="fragment">Web Storage - <span class="em2">window.localStorage</span></li>
-			<li class="fragment">Offline Web Applications - <span class="em2">window.applicationCache</span></li>
-			<li class="fragment">Geolocation - <span class="em2">navigator.geolocation</span></li>
-			<li class="fragment">Device orientation event - <span class="em2">deviceorientation</span></li>
-			<li class="fragment">Touch events - <span class="em2">touch(start|end|move|cancel)</span></li>
-			<li class="fragment">User media - <span class="em2">video</span>, <span class="em2">audio</span>, <span class="em2">x-webkit-speech</span></li>
-		</ul>
 	</section>
 
-	<section data-markdown="canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-	<section data-markdown="canvas_screenshots_screen.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-	<section data-markdown="canvas_screenshots_canvas.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:" data-charset="utf-8"></section>
-
-
-
-
-
 	<section>
-
-		<h6>Notable APIs</h6>
-		<h2>Web Storage, Touch Events, Offline Web Applications</h2>
-
-		<div>Live Demo: <a href="http://ghita.org/ux/chess/">Chess Web Application</a></div>
-		<div>Source: <a href="https://github.com/serbanghita/jQuery-Chess">GitHub</a></div>
-
-	</section>
-
-
-	<section>
-		<h2>Case studies</h2>
-
+		<h2>Studii de caz</h2>
 		<ul>
 			<li class="fragment">Avangate Mobile Shopping Cart</li>
 			<li class="fragment">Avangate Visitor Web App</li>
 			<li class="fragment">Chess Web App</li>
 			<li class="fragment">Cut the Rope</li>
-			<li class="fragment">My multiplayer game</li>
+			<li class="fragment">Joc multiplayer</li>
 		</ul>
 	</section>
 
 	<section>
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
+		<section>
+			<h6>Studii de caz</h6>
+			<h2>Avangate Mobile Shopping Cart</h2>
 
-		<img src="imgs/Avangate Control Panel - Mobile Editor.png">
+			<p style="margin-top:20px; font-size:80%;">Demo: <a href="#">live test</a></p>
+		</section>
 
-		<!-- @todo: screenshots with the fields on mobile -->
+		<section data-transition="fade">
+			<img src="imgs/cart/1.PNG" />
+		</section>
 
-	</section>
+		<section data-transition="fade">
+			<img src="imgs/cart/2.PNG" />
+		</section>
 
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
+		<section data-transition="fade">
+			<img src="imgs/cart/3.PNG" />
+		</section>
 
-		<img src="imgs/cart/1.PNG" />
-	</section>
+		<section data-transition="fade">
+			<img src="imgs/cart/4.PNG" />
+		</section>
 
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
+		<section data-transition="fade">
+			<img src="imgs/cart/5.PNG" />
+		</section>
 
-		<img src="imgs/cart/2.PNG" />
-	</section>
+		<section data-transition="fade">
+			<img src="imgs/cart/6.PNG" />
+		</section>
 
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
+		<section data-transition="fade">
+			<img src="imgs/cart/7.PNG" />
+		</section>
 
-		<img src="imgs/cart/3.PNG" />
-	</section>
-
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
-
-		<img src="imgs/cart/4.PNG" />
-	</section>
-
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
-
-		<img src="imgs/cart/5.PNG" />
-	</section>
-
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
-
-		<img src="imgs/cart/6.PNG" />
-	</section>
-
-	<section data-transition="fade">
-		<h6>Case studies</h6>
-		<h2>Avangate Mobile Shopping Cart</h2>
-
-		<img src="imgs/cart/7.PNG" />
 	</section>
 
 	<section>
-		<h6>Case studies</h6>
+		<h6>Studii de caz</h6>
 		<h2>Avangate Visitor Web App</h2>
 
 		<img src="imgs/av_visitor/entrance.jpg" style="border:2px solid white;" />
@@ -700,7 +651,38 @@
 		<!-- descriere -->
 		<!-- obiective mele -->
 		<!-- explicat diferenta intre GPU si CPU -->
+	</section>
 
+	<section>
+		<h6>Studii de caz</h6>
+		<h2>Chess Web App</h2>
+
+		<div>Live Demo: <a href="http://ghita.org/ux/chess/">Chess Web Application</a></div>
+		<div>Source: <a href="https://github.com/serbanghita/jQuery-Chess">GitHub</a></div>
+	</section>
+
+	<section>
+		<h6>Studii de caz</h6>
+		<h2>Cut the rope</h2>
+
+		<p>Jocul vine sub forma de <span class="em2">aplicatie nativa</span> pentru iOS si Android OS. Pentru dispozitivele clasice s-a folosit <span class="em2">HTML5 canvas</span>.</p>
+
+		<img src="imgs/Cut-the-Rope-cover.png" height="400">
+
+	</section>
+
+	<section>
+		<h6>Studii de caz</h6>
+		<h2>Joc multiplayer</h2>
+
+		<p>Dezvoltat de mine seara tarziu.</p>
+
+	</section>
+
+
+	<section>
+		<h1>Multumesc!</h1>
+	</section>
 
 
 
